--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="./sass/style/style.css" />
     </head>
     <body>
-        <div class="card">
+        <main class="card">
             <div class="head">
                 <div class="img">
                     <img
@@ -45,7 +45,7 @@
                 <a href="#">Twitter</a>
                 <a href="#">Instagram</a>
             </div>
-        </div>
+        </main>
 
         <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
